--- a/404.html
+++ b/404.html
@@ -10,12 +10,12 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
 		<title>PickNWin - Fantasy Football</title>
 		
-		<link rel="modulepreload" href="/my-11-app/_app/immutable/entry/start.C-m9g5wO.js">
-		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/u3xqmcfi.js">
+		<link rel="modulepreload" href="/my-11-app/_app/immutable/entry/start.b4SDu9oh.js">
+		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/DotlNnaL.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/CeyqlY7M.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/BYwdtpf8.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/D4e3NgJS.js">
-		<link rel="modulepreload" href="/my-11-app/_app/immutable/entry/app.D-ZCOW6L.js">
+		<link rel="modulepreload" href="/my-11-app/_app/immutable/entry/app.IGBOnPKA.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/D9Z9MdNV.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="/my-11-app/_app/immutable/chunks/x2hlQoet.js">
@@ -26,7 +26,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_vyhv0d = {
+					__sveltekit_kwp5q7 = {
 						base: "/my-11-app",
 						assets: "/my-11-app"
 					};
@@ -34,8 +34,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/my-11-app/_app/immutable/entry/start.C-m9g5wO.js"),
-						import("/my-11-app/_app/immutable/entry/app.D-ZCOW6L.js")
+						import("/my-11-app/_app/immutable/entry/start.b4SDu9oh.js"),
+						import("/my-11-app/_app/immutable/entry/app.IGBOnPKA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
